--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
     "name": "webpack-theme-color-replacer",
-    "version": "1.1.4",
+    "version": "1.1.5",
     "description": "A webpack plugin designed to dynamicly change the theme colors. 实现快速动态替换主题色的webpack插件. ",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"No test speci   fied\" && exit 1"
+        "test": "node test/index.js D:\\t\\vendors.chunk.css"
     },
     "dependencies": {
     },
