--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "A webpack plugin designed to dynamicly change the theme colors. 实现快速动态替换主题色的webpack插件. ",
     "main": "index.js",
     "scripts": {
-        "test": "node test/index.js D:\\t\\vendors.chunk.css"
+        "test": "node test/index.js"
     },
     "dependencies": {
     },
