--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
     "name": "webpack-theme-color-replacer",
     "version": "1.1.6",
-    "description": "A webpack plugin designed to dynamicly change the theme colors. 实现快速动态替换主题色的webpack插件. ",
+    "description": "A webpack plugin designed to dynamicly change the theme colors at runtime. 实现运行时快速动态替换主题色的webpack插件. ",
     "main": "index.js",
     "scripts": {
-        "test": "node test/index.js"
+        "test": "node test/index.js",
+        "webpack": "node test/webpack.js"
     },
-    "dependencies": {
+    "dependencies": {},
+    "devDependencies": {
+        "webpack": "*"
     },
     "keywords": [
         "webpack",
         "javascript",
-        "ifdebug",
-        "conditional",
-        "compile"
+        "theme",
+        "color",
+        "replacer",
+        "runtime"
     ],
     "author": {
         "name": "James.Huang",
