测试 #f67a1750 这样的颜色

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "css-loader": "^3.0.0",
     "glob": "^7.1.3",
     "rimraf": "^2.6.3",
-    "webpack": "*"
+    "webpack": "*",
+    "mkdirp": "^0.5.1"
   },
   "keywords": [
     "webpack",
