--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "webpack-theme-color-replacer",
-  "version": "1.3.9",
+  "version": "1.3.10",
   "description": "A webpack plugin designed to dynamicly change the theme colors at runtime. 实现运行时快速动态替换主题色的webpack插件. ",
   "main": "src/index.js",
   "scripts": {
     "test": "node test/nodejs/index.js",
     "webpack": "node test/webpack/webpack.js",
-    "debug": "npm run webpack --theme_debug",
-    "el-color": "node -e \"console.log(require('./forElementUI/getElementUISeries.js')('#f67a17').join('|'))\""
+    "debug": "npm run webpack --theme_debug"
   },
   "dependencies": {
     "webpack-sources": "*"
@@ -33,7 +32,7 @@
     "url": "http://www.hz300.com/webpack-theme-color-replacer/"
   },
   "license": "MIT",
-  "readme": "readme.md",
+  "readme": "README.md",
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
   }
