--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "webpack-theme-color-replacer",
-  "version": "1.3.19",
+  "version": "1.3.20",
   "description": "A webpack plugin designed to dynamicly change the theme colors at runtime. 实现运行时快速动态替换主题色的webpack插件. ",
   "main": "src/index.js",
   "scripts": {
     "test": "node test/nodejs/index.js",
     "webpack": "node test/webpack/webpack.js",
-    "debug": "npm run webpack --theme_debug"
+    "debug": "npm run webpack --theme_debug",
+    "prepublish": "npm test"
   },
   "dependencies": {
     "webpack-sources": "*"
