--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "css-loader": "^3.6.0",
     "glob": "^7.1.3",
     "rimraf": "^2.6.3",
-    "webpack": "*",
+    "webpack": "4.*",
     "mkdirp": "^0.5.1"
   },
   "keywords": [
