client.browser.js

--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "webpack-theme-color-replacer",
-  "version": "1.4.2",
+  "version": "1.4.3",
   "description": "A webpack plugin designed to dynamicly change the theme colors at runtime. 实现运行时快速动态替换主题色的webpack插件. ",
   "main": "src/index.js",
   "scripts": {
     "test": "node test/nodejs/index.js && npm run webpack",
     "webpack": "node test/webpack/webpack.js",
     "debug": "npm run webpack --theme_debug",
-    "prepublish": "npm test"
+    "build-client": "node test/build-client.js",
+    "prepublish": "npm run build-client && npm test"
   },
   "dependencies": {
     "webpack-sources": "*"
